add slick files

--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 	<title>Document</title>
 	<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet"
 		id="bootstrap-css">
-	<script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
-	<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-	<script src="js/scripts.js"></script>
+	
+	
 	<!------ Include the above in your HEAD tag ---------->
 </head>
 
@@ -68,6 +67,10 @@
 	<div>These users have input correct information for registration: </div>
 	<ul id="registered-users">
 	</ul>
+	<script src="js/jquery.min.js"></script>
+	<script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
+	<script src="js/scripts.js"></script>
+	<s
 </body>
 
 </html>
