add jQuery function and animation

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 	<title>Document</title>
 	<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet"
 		id="bootstrap-css">
-	
+    <link rel="stylesheet" href="css/slick.css">
+    <link rel="stylesheet" href="css/slick-theme.css">
+    <link rel="stylesheet" href="css/styles.css">
 	
 	<!------ Include the above in your HEAD tag ---------->
 </head>
@@ -67,10 +69,11 @@
 	<div>These users have input correct information for registration: </div>
 	<ul id="registered-users">
 	</ul>
-	<script src="js/jquery.min.js"></script>
+  <script src="js/jquery.min.js"></script>
+  <script src="js/slick.js"></script>
 	<script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
 	<script src="js/scripts.js"></script>
-	<s
+	
 </body>
 
 </html>
